cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)

project("To Do List")

enable_testing()
SET(CMAKE_C_COMPILER /usr/bin/gcc)
#SET(CMAKE_CXX_COMPILER /usr/bin/g++)
SET(CMAKE_CXX_COMPILER /usr/bin/clang++)

#ET(CMAKE_CXX_COMPILER /Users/hishukl2/Documents/LLVM/build/bin/clang-cpp)

# if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR
#     "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
#     set(warnings "-std=c++11 -I/usr/local/include/antlr4-runtime -I/usr/local/include/llvm -L/usr/local/lib -lantlr4-runtime `llvm-config --system-libs --libs`")
# elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
#     set(warnings " ")
# endif()

# if (NOT CONFIGURED_ONCE)
#     set(CMAKE_CXX_FLAGS "${warnings}"
#         CACHE STRING "Flags used by the compiler during all build types." FORCE)
#     set(CMAKE_C_FLAGS   "${warnings}"
#         CACHE STRING "Flags used by the compiler during all build types." FORCE)
# endif()

set(CMAKE_CXX_FLAGS "-std=c++11 ")

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(IncludeFiles)

include_directories("/usr/local/include/antlr4-runtime/")
include_directories("/usr/local/include/llvm/")

add_executable(codegen test.cpp)


target_link_libraries(codegen include_file)
#target_link_libraries(codegen /usr/local/lib/)
target_link_libraries(codegen antlr4-runtime)
target_link_libraries(codegen LLVMAArch64AsmParser)
target_link_libraries(codegen LLVMAArch64AsmPrinter)
target_link_libraries(codegen LLVMAArch64CodeGen)
target_link_libraries(codegen LLVMAArch64Desc)
target_link_libraries(codegen LLVMAArch64Disassembler)
target_link_libraries(codegen LLVMAArch64Info)
target_link_libraries(codegen LLVMAArch64Utils)
target_link_libraries(codegen LLVMAMDGPUAsmParser)
target_link_libraries(codegen LLVMAMDGPUAsmPrinter)
target_link_libraries(codegen LLVMAMDGPUCodeGen)
target_link_libraries(codegen LLVMAMDGPUDesc)
target_link_libraries(codegen LLVMAMDGPUDisassembler)
target_link_libraries(codegen LLVMAMDGPUInfo)
target_link_libraries(codegen LLVMAMDGPUUtils)
target_link_libraries(codegen LLVMARMAsmParser)
target_link_libraries(codegen LLVMARMAsmPrinter)
target_link_libraries(codegen LLVMARMCodeGen)
target_link_libraries(codegen LLVMARMDesc)
target_link_libraries(codegen LLVMARMDisassembler)
target_link_libraries(codegen LLVMARMInfo)
target_link_libraries(codegen LLVMARMUtils)
target_link_libraries(codegen LLVMAggressiveInstCombine)
target_link_libraries(codegen LLVMAnalysis)
target_link_libraries(codegen LLVMAsmParser)
target_link_libraries(codegen LLVMAsmPrinter)
target_link_libraries(codegen LLVMBPFAsmParser)
target_link_libraries(codegen LLVMBPFAsmPrinter)
target_link_libraries(codegen LLVMBPFCodeGen)
target_link_libraries(codegen LLVMBPFDesc)
target_link_libraries(codegen LLVMBPFDisassembler)
target_link_libraries(codegen LLVMBPFInfo)
target_link_libraries(codegen LLVMBinaryFormat)
target_link_libraries(codegen LLVMBitReader)
target_link_libraries(codegen LLVMBitWriter)
target_link_libraries(codegen LLVMCodeGen)
target_link_libraries(codegen LLVMCore)
target_link_libraries(codegen LLVMCoroutines)
target_link_libraries(codegen LLVMCoverage)
target_link_libraries(codegen LLVMDebugInfoCodeView)
target_link_libraries(codegen LLVMDebugInfoDWARF)
target_link_libraries(codegen LLVMDebugInfoMSF)
target_link_libraries(codegen LLVMDebugInfoPDB)
target_link_libraries(codegen LLVMDemangle)
target_link_libraries(codegen LLVMDlltoolDriver)
target_link_libraries(codegen LLVMExecutionEngine)
target_link_libraries(codegen LLVMFuzzMutate)
target_link_libraries(codegen LLVMGlobalISel)
target_link_libraries(codegen LLVMHexagonAsmParser)
target_link_libraries(codegen LLVMHexagonCodeGen)
target_link_libraries(codegen LLVMHexagonDesc)
target_link_libraries(codegen LLVMHexagonDisassembler)
target_link_libraries(codegen LLVMHexagonInfo)
target_link_libraries(codegen LLVMIRReader)
target_link_libraries(codegen LLVMInstCombine)
target_link_libraries(codegen LLVMInstrumentation)
target_link_libraries(codegen LLVMInterpreter)
target_link_libraries(codegen LLVMLTO)
target_link_libraries(codegen LLVMLanaiAsmParser)
target_link_libraries(codegen LLVMLanaiAsmPrinter)
target_link_libraries(codegen LLVMLanaiCodeGen)
target_link_libraries(codegen LLVMLanaiDesc)
target_link_libraries(codegen LLVMLanaiDisassembler)
target_link_libraries(codegen LLVMLanaiInfo)
target_link_libraries(codegen LLVMLibDriver)
target_link_libraries(codegen LLVMLineEditor)
target_link_libraries(codegen LLVMLinker)
target_link_libraries(codegen LLVMMC)
target_link_libraries(codegen LLVMMCDisassembler)
target_link_libraries(codegen LLVMMCJIT)
target_link_libraries(codegen LLVMMCParser)
target_link_libraries(codegen LLVMMIRParser)
target_link_libraries(codegen LLVMMSP430AsmPrinter)
target_link_libraries(codegen LLVMMSP430CodeGen)
target_link_libraries(codegen LLVMMSP430Desc)
target_link_libraries(codegen LLVMMSP430Info)
target_link_libraries(codegen LLVMMipsAsmParser)
target_link_libraries(codegen LLVMMipsAsmPrinter)
target_link_libraries(codegen LLVMMipsCodeGen)
target_link_libraries(codegen LLVMMipsDesc)
target_link_libraries(codegen LLVMMipsDisassembler)
target_link_libraries(codegen LLVMMipsInfo)
target_link_libraries(codegen LLVMNVPTXAsmPrinter)
target_link_libraries(codegen LLVMNVPTXCodeGen)
target_link_libraries(codegen LLVMNVPTXDesc)
target_link_libraries(codegen LLVMNVPTXInfo)
target_link_libraries(codegen LLVMObjCARCOpts)
target_link_libraries(codegen LLVMObject)
target_link_libraries(codegen LLVMObjectYAML)
target_link_libraries(codegen LLVMOption)
target_link_libraries(codegen LLVMOrcJIT)
target_link_libraries(codegen LLVMPasses)
target_link_libraries(codegen LLVMPowerPCAsmParser)
target_link_libraries(codegen LLVMPowerPCAsmPrinter)
target_link_libraries(codegen LLVMPowerPCCodeGen)
target_link_libraries(codegen LLVMPowerPCDesc)
target_link_libraries(codegen LLVMPowerPCDisassembler)
target_link_libraries(codegen LLVMPowerPCInfo)
target_link_libraries(codegen LLVMProfileData)
target_link_libraries(codegen LLVMRuntimeDyld)
target_link_libraries(codegen LLVMScalarOpts)
target_link_libraries(codegen LLVMSelectionDAG)
target_link_libraries(codegen LLVMSparcAsmParser)
target_link_libraries(codegen LLVMSparcAsmPrinter)
target_link_libraries(codegen LLVMSparcCodeGen)
target_link_libraries(codegen LLVMSparcDesc)
target_link_libraries(codegen LLVMSparcDisassembler)
target_link_libraries(codegen LLVMSparcInfo)
target_link_libraries(codegen LLVMSupport)
target_link_libraries(codegen LLVMSymbolize)
target_link_libraries(codegen LLVMSystemZAsmParser)
target_link_libraries(codegen LLVMSystemZAsmPrinter)
target_link_libraries(codegen LLVMSystemZCodeGen)
target_link_libraries(codegen LLVMSystemZDesc)
target_link_libraries(codegen LLVMSystemZDisassembler)
target_link_libraries(codegen LLVMSystemZInfo)
target_link_libraries(codegen LLVMTableGen)
target_link_libraries(codegen LLVMTarget)
target_link_libraries(codegen LLVMTransformUtils)
target_link_libraries(codegen LLVMVectorize)
target_link_libraries(codegen LLVMWindowsManifest)
target_link_libraries(codegen LLVMX86AsmParser)
target_link_libraries(codegen LLVMX86AsmPrinter)
target_link_libraries(codegen LLVMX86CodeGen)
target_link_libraries(codegen LLVMX86Desc)
target_link_libraries(codegen LLVMX86Disassembler)
target_link_libraries(codegen LLVMX86Info)
target_link_libraries(codegen LLVMX86Utils)
target_link_libraries(codegen LLVMXCoreAsmPrinter)
target_link_libraries(codegen LLVMXCoreCodeGen)
target_link_libraries(codegen LLVMXCoreDesc)
target_link_libraries(codegen LLVMXCoreDisassembler)
target_link_libraries(codegen LLVMXCoreInfo)
target_link_libraries(codegen LLVMXRay)
target_link_libraries(codegen LLVMipo)
target_link_libraries(codegen z)
target_link_libraries(codegen curses)
target_link_libraries(codegen m)
target_link_libraries(codegen xml2)
